production with 3 pillars, remove scripts for ff, new mobile hp banner, use cdn for video, enlarge product page, lg insta photos

--- a/assets/added.js.liquid
+++ b/assets/added.js.liquid
@@ -1,14 +1,8 @@
 function sleep(time) {
-  return new Promise((resolve) => setTimeout(resolve, time));
-}
-
-$(".quick-view").on("click", function() {
-  sleep(500).then(() => {
-    $("#quick-view-modal").find("#size-link").remove();
-    $("#quick-view-modal").find(".price").css("padding-bottom", "20px");
-    $(".product-single__thumbnail").removeClass("hidden");
+  return new Promise(function (resolve) {
+    return setTimeout(resolve, time);
   });
-});
+}
 
 $(".pillar .panel.amb").hover(function() {
   $(this).find("h1, h4, p").toggleClass("invisible");
