--- a/snippets/header2.liquid
+++ b/snippets/header2.liquid
@@ -4,7 +4,7 @@
 	</div>
 </div>
 <div id="header-ontop" class="is-sticky"></div> -->
-<header id="header" class="header style2">
+<header id="header{{ header2}}" class="header style2">
   <div class="row minor-h-marg">
     <div class="{{margin_shipping_icon}}">
       <div{{container_shipping_icon}}>
@@ -15,13 +15,13 @@
               {% if header2 == "Instagram" %}
                 <h2 class="home-collection">Shop Instagram</h2>
               {% else %}
-                <h1 class="small-caps hidden-xs hidden-sm">Get Yourself a Gift, As You Give the Gift of Vision</h1>
+<!--                 <h1 class="small-caps hidden-xs hidden-sm">Get Yourself a Gift, As You Give the Gift of Vision</h1>
                 <h3 class="small-caps hidden-md hidden-lg">Get Yourself a Gift, As You Give the Gift of Vision</h2>
 
                 <h3 class="hidden-xs hidden-sm small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h3>
                 <h6 class="hidden-md hidden-lg small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h5>
 
-                <hr class="minor-h-marg" />
+                <hr class="minor-h-marg" /> -->
 
                 <h2 class="home-collection">Best Sellers</h2>
               {% endif %}
