--- a/snippets/header-scripts.liquid
+++ b/snippets/header-scripts.liquid
@@ -8,19 +8,11 @@
 <script src="{{ "jquery.themepunch.revolution.min.js" | asset_url }}" async></script>
 
 
-<script src="{{ "revolution.extension.actions.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.carousel.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.kenburn.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.layeranimation.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.migration.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.navigation.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.parallax.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.slideanims.min.js" | asset_url }}" async></script>
-<script src="{{ "revolution.extension.video.min.js" | asset_url }}" async></script>
+
 
 
 <script src="{{ "option_selection.js" | shopify_asset_url }}" async></script>
-<script src="//cdn.shopify.com/s/javascripts/currencies.js" async></script>
+<script src="{{ "currencies.js" | shopify_asset_url }}" async></script>
 <script src="{{ "jquery.currencies.min.js" | asset_url }}" async></script>
 <script src="{{ "jquery.storageapi.min.js" | asset_url }}" async></script>
 
