--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="top-pic fellosophy-pic jumbotron col-xs-12">
     <div class="col-xs-10 col-xs-offset-1 text-center">
-      <h1>Our Fellosophy</h1>
+      <h1 class="text-drop-shadow">Our Fellosophy</h1>
     </div>
   </div>
 </div>
