--- a/templates/page.charity.liquid
+++ b/templates/page.charity.liquid
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="top-pic charity-pic jumbotron col-xs-12">
     <div class="col-xs-10 col-xs-offset-1 text-center">
-      <h1>Giving the Gift of Vision</h1>
+      <h1 class="text-drop-shadow">Giving the Gift of Vision</h1>
     </div>
   </div>
 </div>
