--- a/templates/page.customer-care.liquid
+++ b/templates/page.customer-care.liquid
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="top-pic care-pic jumbotron col-xs-12 no-margin">
     <div class="col-xs-10 col-xs-offset-1 text-center">
-      <h1>Customer Care</h1>
+      <h1 class="text-drop-shadow">Customer Care</h1>
     </div>
   </div>
 </div>
 
-<h1 class="hidden-xs text-center care-stripe small-caps jumbotron">Your Satisfaction Is Our Priority</h1>
-<h3 class="visible-xs text-center care-stripe small-caps jumbotron">Your Satisfaction Is Our Priority</h3>
+<h1 class="hidden-xs text-center small-caps jumbotron blue-bg">Your Satisfaction Is Our Priority</h1>
+<h3 class="visible-xs text-center small-caps jumbotron blue-bg">Your Satisfaction Is Our Priority</h3>
 
 <!-- Start SM-LG Screen -->
 <div class="row row-eq-height care-section minor-v-pads minor-h-pads hidden-xs">
